--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -18,7 +18,7 @@ body {
 	font-family: 'Arial', sans-serif;
 	margin: 0;
 	padding: 0;
-  background: green;
+//  background: orange;
 }
 
 h1,h2,h3,h4,h5,h6,p{
